--- a/src/html/relay.html
+++ b/src/html/relay.html
@@ -70,7 +70,7 @@
     <form action="relay" method="POST">
         <p>Время включения: #[1]</p><!-- gt/rl/md/=2/0//; -->
         <p></p>Время выключения: #[2]</p>
-        <p></p>Повтор: OFF</p>
+        <p></p>Повтор: #[5]</p>
         <button 
             type="submit" 
             name="r2m0" 
@@ -98,7 +98,7 @@
     <form action="relay" method="POST">
         <p>Время включения: #[3]</p><!-- gt/rl/md/=2/1//; -->
         <p></p>Время выключения: #[4]</p>
-        <p></p>Повтор: OFF</p>
+        <p></p>Повтор: #[6]</p>
         <button 
             type="submit" 
             name="r2m1" 
