--- a/src/html/relay.html
+++ b/src/html/relay.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Управление UNO</h1>
-    
+    <a href="/relay">Обновить</a>
     <h2>Текущее время UNO #[0]</h2>
     
     <h3>Уличное освещение</h3>
